Update footer address in index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <img src="logo.png" alt="Company Logo">
   
   <footer>
-    kt: 	711025-0810 – Skemmuvegur 14, 200 Kópavogur – 
+    kt: 	711025-0810 – Engihjalli 8, 200 Kópavogur – 
     <a href="vidskiptaskilmalar.html">Viðskiptaskilmálar</a>
   </footer>
 </body>
