--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <img src="logo.png" alt="Company Logo">
   
   <footer>
-    kt: 	711025-0810 – Engihjalli 8, 200 Kópavogur – 
+    kt: 	711025-0810 – Engihjalli 8, 200 Kópavogur – <a href="mailto:hux@hux.is">hux@hux.is</a> -
     <a href="vidskiptaskilmalar.html">Viðskiptaskilmálar</a>
   </footer>
 </body>
