Remove pricing table and payment terms
Removed pricing table and payment terms from the document.

--- a/vidskiptaskilmalar.html
+++ b/vidskiptaskilmalar.html
@@ -22,7 +22,7 @@
 
     h2 {
       margin-top: 40px;
-      color: #007acc;
+      color: #222;
     }
 
     table {
@@ -67,72 +67,6 @@
     Viðskiptaskilmálar þessir eins og þeir eru á hverjum tíma gilda um alla þá þjónustu sem HUXIFY ehf. 
     (hér eftir nefnt „félagið") lætur viðskiptavinum sínum í té. 
     Neðangreindir skilmálar gilda eftir því sem við á hverju sinni nema um annað sé samið sérstaklega.
-  </p>
-
-  <h2>Taxti</h2>
-  <p>Allar upphæðir eru án virðisaukaskatts.</p>
-
-  <table>
-    <thead>
-      <tr>
-        <th>Taxti</th>
-        <th>Eininga/Tímagjald</th>
-        <th>Lýsing</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Sérfræðingur F1</td>
-        <td>36.000.- kr.</td>
-        <td>Sérfræðingur, ráðgjafi eða forritari með mikla sérþekkingu, reynslu og starfstengda sérhæfingu.</td>
-      </tr>
-      <tr>
-        <td>Akstur að 20 km</td>
-        <td>0 kr.</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Annar akstur</td>
-        <td>Samkvæmt viðmiðun rsk.is</td>
-        <td></td>
-      </tr>
-    </tbody>
-  </table>
-
-  <p>
-    Afslættir, hvort sem um staðgreiðslu- eða magnafslátt er að ræða, dragast frá grunnverði án virðisaukaskatts.
-    Félagið áskilur sér rétt til að breyta verðskrá með 30 daga fyrirvara. 
-    Hafi aðilar samið sín á milli um fast verð á gildistíma samnings, skal það verð þó ekki breytast.
-  </p>
-
-  <p>
-    Útkall er 4 tímar lágmark.  
-    Vinna sem fram fer utan venjulegs vinnutíma milli klukkan 17:00 og 07:00 á virkum dögum er skilgreind sem yfirvinna. 
-    Ef óskað er eftir yfirvinnu leggst 18% álag ofan á tímagjaldið.
-  </p>
-
-  <p>
-    Vinna þar sem mætt er á staðinn svo sem fundir o.þ.h. telst lágmark 2 tímar að meðtöldum ferðalögum og undirbúningi.  
-    Tilfallandi viðvik í fjarvinnu svo sem að logga sig inn á kerfi og vinna eða lengri svör við fyrirspurnum telst lágmark 1 tími, 
-    en ekki er rukkað fyrir stutt símtöl eða tölvupósta (5–10 mín).
-  </p>
-
-  <h2>Greiðsluskilmálar og viðskiptareikningar</h2>
-  <p>
-    Úttektartímabil er frá 26. degi hvers mánaðar til 25. næsta mánaðar.  
-    Athugasemdir vegna útgefinna reikninga skulu berast félaginu innan 30 daga frá útgáfudegi annars teljast þeir samþykktir.
-  </p>
-  <p>
-    Reikningar eru sendir út um hver mánaðarmót fyrir síðastliðið úttektartímabil.  
-    Gjalddagi er seinasti dagur mánaðar eftir að úttektartímabili lýkur og eindagi er 20 dögum síðar.
-  </p>
-  <p>
-    Falli skuld í eindaga, áskilur félagið sér rétt til að senda innheimtubréf til ítrekunar á skuldinni.  
-    Innheimtubréf hafa í för með sér kostnað sem skuldara ber að greiða.  
-    Ef innheimtubréfum er ekki sinnt er skuldin send í áframhaldandi innheimtu.
-  </p>
-  <p>
-    Félagið áskilur sér rétt til þess að synja viðskiptavini um þjónustu hafi reikningur ekki verið greiddur innan 30 daga frá eindaga.
   </p>
 
   <h2>Hugverkaréttur</h2>
